--- a/styles/mixins.sass
+++ b/styles/mixins.sass
@@ -21,6 +21,7 @@
   opacity: 0.4
   border-radius: inherit
   &-container
+    overflow: hidden
     position: absolute
     top: 10px
     bottom: -10px
