--- a/styles/expose-card.sass
+++ b/styles/expose-card.sass
@@ -1,19 +1,33 @@
 @import '@/styles/mixins.sass'
 
 .e-card
-  min-height: 120px
   position: relative
   background-color: #333
-  border-radius: 5px
+  border-radius: 0.5em
   cursor: pointer
+  width: 540px
+  height: 180px
   &:hover
     .e-card__shadow-blur
       opacity: 0.8
   &__layer
     +posa(0)
   &__info
-    padding: 20px
+    padding: 1.5em
     color: white
+  &__info--catalogue
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    .e-card__title
+      max-width: 90%
+      font-size: 22px
+      line-height: 25px
+      font-weight: bold
+      white-space: pre-wrap
+    .e-card__date
+      text-align: right
+      font-size: 16px
   &__image
     width: 100%
     overflow: hidden
@@ -23,15 +37,27 @@
     justify-content: center
     -webkit-mask-image: -webkit-radial-gradient(white, black)
     img
-      animation: slide 20s alternate infinite ease-in-out
       width: 100%
     &::after
       +posa(0)
       content: ''
-      background-color: rgba(black, 0.4)
+      background-color: rgba(black, 0.45)
   &__shadow-blur
     +blur-bg
     transition: all ease 0.25s
-    &-container
-      img
-        animation: slide 20s alternate infinite linear
+
+@media only screen and (max-width : 320px)
+  .e-card
+    width: 290px
+    height: 120px
+    &__info--catalogue
+      padding: 15px
+      .e-card__title
+        max-width: 100%
+        font-size: 14px
+        line-height: 18px
+        font-weight: bold
+        white-space: pre-wrap
+      .e-card__date
+        text-align: right
+        font-size: 16px
