--- a/styles/media.sass
+++ b/styles/media.sass
@@ -1,14 +1,14 @@
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1800px)
   .cat-layout
-    max-width: 1660px
+    width: 1660px
     &__grid
       grid-template-columns: 540px 540px 540px
       grid-gap: 40px 20px
 
 @media only screen and (max-width : 1720px)
   .cat-layout
-    max-width: 1120px
+    width: 1120px
     &__grid
       grid-template-columns: 540px 540px
       grid-gap: 40px 40px
@@ -16,7 +16,7 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 1200px)
 	.cat-layout
-    max-width: 1100px
+    width: 1100px
     &__grid
       grid-template-columns: 540px 540px
       grid-gap: 40px 20px
@@ -25,7 +25,7 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 1170px)
 	.cat-layout
-    max-width: 800px
+    width: 800px
     &__grid
       grid-template-columns: 540px
       grid-gap: 40px 40px
