--- a/styles/expose-card.sass
+++ b/styles/expose-card.sass
@@ -46,6 +46,54 @@
     +blur-bg
     transition: all ease 0.25s
 
+@media only screen and (max-width : 1024px)
+  .e-card
+    width: 452px
+    height: 150px
+    &__info--catalogue
+      padding: 15px
+      .e-card__title
+        max-width: 100%
+        font-size: 17px
+        line-height: 20px
+        font-weight: bold
+        white-space: pre-wrap
+      .e-card__date
+        text-align: right
+        font-size: 16px
+
+@media only screen and (max-width : 425px)
+  .e-card
+    width: 385px
+    height: 166.6px
+    &__info--catalogue
+      padding: 15px
+      .e-card__title
+        max-width: 100%
+        font-size: 17px
+        line-height: 20px
+        font-weight: bold
+        white-space: pre-wrap
+      .e-card__date
+        text-align: right
+        font-size: 16px
+
+@media only screen and (max-width : 375px)
+  .e-card
+    width: 335px
+    height: 145px
+    &__info--catalogue
+      padding: 15px
+      .e-card__title
+        max-width: 100%
+        font-size: 17px
+        line-height: 20px
+        font-weight: bold
+        white-space: pre-wrap
+      .e-card__date
+        text-align: right
+        font-size: 16px
+
 @media only screen and (max-width : 320px)
   .e-card
     width: 300px
