added and removed some UI

--- a/styles/mixins.sass
+++ b/styles/mixins.sass
@@ -48,3 +48,13 @@
     transform: translateY(-15px)
   100%
     transform: translateY(15px)
+
+@mixin button
+  +tdn
+  border: none
+  outline: none
+  cursor: pointer
+  display: flex
+  align-items: center
+  justify-content: center
+  position: relative
