--- a/styles/multiselect.sass
+++ b/styles/multiselect.sass
@@ -64,7 +64,6 @@ fieldset[disabled] .multiselect
   display: block
   // display: flex
   position: relative
-  width: 100%
   min-height: 32px
   text-align: left
   color: #35495e
@@ -102,7 +101,6 @@ fieldset[disabled] .multiselect
   border-radius: 5px
   background: #fff
   padding: 0 5px
-  width: 100%
   transition: border .1s ease
   box-sizing: border-box
   vertical-align: top
@@ -134,7 +132,7 @@ fieldset[disabled] .multiselect
 
 .multiselect__tags-wrap
   display: grid
-  grid-template-columns: 1fr
+  grid-template-columns: min-content
   grid-auto-rows: 24px
   grid-row-gap: 4px
 
@@ -161,7 +159,7 @@ fieldset[disabled] .multiselect
   padding-right: 29px
   border-radius: 3px
   font-size: 13px
-  background-color: rgba(black, 0.05)
+  background-color: rgba($color-accent, 0.15)
   border: 1px solid rgba(black, 0.05)
   color: rgba(black, 0.75)
   white-space: nowrap
