--- a/styles/vars.sass
+++ b/styles/vars.sass
@@ -5,3 +5,11 @@ $color-warning: #FEB64D
 
 $container-width-xl: 1700px
 $container-size-lg: 1024px
+
+
+$expose-heading-h3: 18px
+$expose-heading-color: #393f45
+$expose-block-padding: 20px
+$expose-info-link-color: #454d54
+$expose-border-radius: 10px
+$expose-bg-color-light: #f1f2f3
